Rename RunCollectionFuzzifier to RunCollectionDiscretizer (#1622)
This commit contains both version and a modified cloning method in the old fuzzifier to enable upgrading by cloning a fuzzifier in the GUI which will then become a discretizer.

git-svn-id: https://src.heuristiclab.com/svn/core/trunk@6690 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
+++ b/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
@@ -110,6 +110,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RunCollectionDiscretizer.cs" />
     <Compile Include="RunCollectionGroupCreater.cs" />
     <Compile Include="RunCollectionSorter.cs" />
     <Compile Include="RunCollectionValueRemover.cs" />
