--- a/sources/HeuristicLab.Problems.DataAnalysis.Symbolic.TimeSeriesPrognosis/3.4/HeuristicLab.Problems.DataAnalysis.Symbolic.TimeSeriesPrognosis-3.4.csproj
+++ b/sources/HeuristicLab.Problems.DataAnalysis.Symbolic.TimeSeriesPrognosis/3.4/HeuristicLab.Problems.DataAnalysis.Symbolic.TimeSeriesPrognosis-3.4.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{DF87C13E-A889-46FF-8153-66DCAA8C5674}</ProjectGuid>
+    <ProjectGuid>{07486E68-1517-4B9D-A58D-A38E99AE71AB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HeuristicLab.Problems.DataAnalysis</RootNamespace>
-    <AssemblyName>HeuristicLab.Problems.DataAnalysis-3.4</AssemblyName>
+    <RootNamespace>HeuristicLab.Problems.DataAnalysis.Symbolic.TimeSeriesPrognosis</RootNamespace>
+    <AssemblyName>HeuristicLab.Problems.DataAnalysis.Symbolic.TimeSeriesPrognosis-3.4</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -107,103 +107,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DoubleLimit.cs" />
-    <Compile Include="Implementation\Classification\ClassificationEnsembleModel.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Implementation\Classification\ClassificationEnsembleSolution.cs" />
-    <Compile Include="Implementation\Classification\ClassificationProblemData.cs" />
-    <Compile Include="Implementation\Classification\ClassificationProblem.cs" />
-    <Compile Include="Implementation\Classification\ClassificationSolution.cs" />
-    <Compile Include="Implementation\Classification\ClassificationEnsembleProblemData.cs" />
-    <Compile Include="Implementation\Classification\ClassificationSolutionBase.cs" />
-    <Compile Include="Implementation\Classification\DiscriminantFunctionClassificationSolutionBase.cs" />
-    <Compile Include="Implementation\Clustering\ClusteringProblem.cs" />
-    <Compile Include="Implementation\Clustering\ClusteringProblemData.cs" />
-    <Compile Include="Implementation\Clustering\ClusteringSolution.cs" />
-    <Compile Include="Implementation\Regression\RegressionEnsembleProblemData.cs" />
-    <Compile Include="Implementation\Regression\RegressionEnsembleModel.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Implementation\Regression\RegressionEnsembleSolution.cs" />
-    <Compile Include="Implementation\TimeSeriesPrognosis\TimeSeriesPrognosisProblem.cs" />
-    <Compile Include="Implementation\TimeSeriesPrognosis\TimeSeriesPrognosisProblemData.cs" />
-    <Compile Include="Implementation\TimeSeriesPrognosis\TimeSeriesPrognosisSolution.cs" />
-    <Compile Include="Implementation\TimeSeriesPrognosis\TimeSeriesPrognosisSolutionBase.cs" />
-    <Compile Include="Interfaces\Classification\IClassificationEnsembleModel.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Interfaces\Classification\IClassificationEnsembleSolution.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Interfaces\Classification\IDiscriminantFunctionThresholdCalculator.cs" />
-    <Compile Include="Interfaces\Regression\IRegressionEnsembleModel.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Interfaces\Regression\IRegressionEnsembleSolution.cs" />
-    <Compile Include="Implementation\Regression\RegressionSolutionBase.cs" />
-    <Compile Include="Interfaces\TimeSeriesPrognosis\ITimeSeriesPrognosisModel.cs" />
-    <Compile Include="Interfaces\TimeSeriesPrognosis\ITimeSeriesPrognosisProblem.cs" />
-    <Compile Include="Interfaces\TimeSeriesPrognosis\ITimeSeriesPrognosisProblemData.cs" />
-    <Compile Include="Interfaces\TimeSeriesPrognosis\ITimeSeriesPrognosisSolution.cs" />
-    <Compile Include="OnlineCalculators\OnlineDirectionalSymmetryCalculator.cs" />
-    <Compile Include="OnlineCalculators\OnlineMeanAbsoluteErrorCalculator.cs" />
-    <Compile Include="OnlineCalculators\OnlineLinearScalingParameterCalculator.cs" />
-    <Compile Include="Implementation\Classification\DiscriminantFunctionClassificationModel.cs" />
-    <Compile Include="Implementation\Classification\DiscriminantFunctionClassificationSolution.cs" />
-    <Compile Include="Implementation\DataAnalysisSolution.cs" />
-    <Compile Include="Interfaces\Classification\IDiscriminantFunctionClassificationModel.cs" />
-    <Compile Include="Interfaces\Classification\IDiscriminantFunctionClassificationSolution.cs" />
-    <Compile Include="Interfaces\Clustering\IClusteringModel.cs" />
-    <Compile Include="Interfaces\Clustering\IClusteringProblem.cs" />
-    <Compile Include="Interfaces\Clustering\IClusteringProblemData.cs" />
-    <Compile Include="Interfaces\Clustering\IClusteringSolution.cs" />
-    <Compile Include="OnlineCalculators\OnlineAccuracyCalculator.cs" />
-    <Compile Include="Implementation\Regression\RegressionProblemData.cs" />
-    <Compile Include="Implementation\DataAnalysisProblemData.cs" />
-    <Compile Include="Implementation\Regression\RegressionProblem.cs" />
-    <Compile Include="Implementation\DataAnalysisProblem.cs" />
-    <Compile Include="Dataset.cs" />
-    <Compile Include="Interfaces\Classification\IClassificationModel.cs" />
-    <Compile Include="Interfaces\Classification\IClassificationProblem.cs" />
-    <Compile Include="Interfaces\Classification\IClassificationProblemData.cs" />
-    <Compile Include="Interfaces\Classification\IClassificationSolution.cs" />
-    <Compile Include="Interfaces\IDataAnalysisProblemData.cs" />
-    <Compile Include="Interfaces\IDataAnalysisSolution.cs" />
-    <Compile Include="Interfaces\IOnlineCalculator.cs" />
-    <Compile Include="Interfaces\Regression\IRegressionModel.cs" />
-    <Compile Include="Interfaces\Regression\IRegressionProblem.cs" />
-    <Compile Include="Interfaces\Regression\IRegressionProblemData.cs" />
-    <Compile Include="Interfaces\Regression\IRegressionSolution.cs" />
-    <Compile Include="OnlineCalculators\OnlineCovarianceCalcualtor.cs" />
-    <Compile Include="OnlineCalculators\OnlineMeanAbsolutePercentageErrorCalculator.cs" />
-    <Compile Include="OnlineCalculators\OnlineMeanAndVarianceCalculator.cs" />
-    <Compile Include="OnlineCalculators\OnlineMeanSquaredErrorCalculator.cs" />
-    <Compile Include="OnlineCalculators\OnlineNormalizedMeanSquaredErrorCalculator.cs" />
-    <Compile Include="OnlineCalculators\OnlinePearsonsRSquaredCalculator.cs" />
-    <Compile Include="Implementation\Regression\RegressionSolution.cs" />
-    <Compile Include="OnlineCalculators\OnlineTheilsUStatisticCalculator.cs" />
-    <Compile Include="OnlineCalculators\OnlineWeightedDirectionalSymmetryCalculator.cs" />
-    <Compile Include="TableFileParser.cs" />
-    <Compile Include="Implementation\Classification\ThresholdCalculators\AccuracyMaximizationThresholdCalculator.cs" />
-    <Compile Include="Implementation\Classification\ThresholdCalculators\NormalDistributionCutPointsThresholdCalculator.cs" />
-    <Compile Include="Implementation\Classification\ThresholdCalculators\ThresholdCalculator.cs" />
+    <Compile Include="HeuristicLabProblemsDataAnalysisSymbolicTimeSeriesPrognosisPlugin.cs" />
+    <Compile Include="Interfaces\ISymbolicTimeSeriesPrognosisEvaluator.cs" />
+    <Compile Include="Interfaces\ISymbolicTimeSeriesPrognosisModel.cs" />
+    <Compile Include="Interfaces\ISymbolicTimeSeriesPrognosisSingleObjectiveEvaluator.cs" />
+    <Compile Include="Interfaces\ISymbolicTimeSeriesPrognosisSolution.cs" />
+    <Compile Include="SingleObjective\SymbolicTimeSeriesPrognosisSingleObjectiveEvaluator.cs" />
+    <Compile Include="SingleObjective\SymbolicTimeSeriesPrognosisSingleObjectiveMeanSquaredErrorEvaluator.cs" />
+    <Compile Include="SingleObjective\SymbolicTimeSeriesPrognosisSingleObjectiveOverfittingAnalyzer.cs" />
+    <Compile Include="SingleObjective\SymbolicTimeSeriesPrognosisSingleObjectivePearsonRSquaredEvaluator.cs" />
+    <Compile Include="SingleObjective\SymbolicTimeSeriesPrognosisSingleObjectiveProblem.cs" />
+    <Compile Include="SingleObjective\SymbolicTimeSeriesPrognosisSingleObjectiveTrainingBestSolutionAnalyzer.cs" />
+    <Compile Include="SingleObjective\SymbolicTimeSeriesPrognosisSingleObjectiveValidationBestSolutionAnalyzer.cs" />
+    <Compile Include="SymbolicTimeSeriesPrognosisModel.cs" />
+    <Compile Include="SymbolicTimeSeriesPrognosisSolution.cs" />
     <None Include="HeuristicLab.snk" />
-    <None Include="HeuristicLabProblemsDataAnalysisPlugin.cs.frame" />
+    <None Include="HeuristicLabProblemsDataAnalysisSymbolicTimeSeriesPrognosisPlugin.cs.frame" />
     <None Include="Properties\AssemblyInfo.frame" />
-    <Compile Include="HeuristicLabProblemsDataAnalysisPlugin.cs" />
-    <Compile Include="Interfaces\IDataAnalysisModel.cs" />
-    <Compile Include="Interfaces\IDataAnalysisProblem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\HeuristicLab.Analysis\3.3\HeuristicLab.Analysis-3.3.csproj">
+      <Project>{887425B4-4348-49ED-A457-B7D2C26DDBF9}</Project>
+      <Name>HeuristicLab.Analysis-3.3</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.Collections\3.3\HeuristicLab.Collections-3.3.csproj">
       <Project>{958B43BC-CC5C-4FA2-8628-2B3B01D890B6}</Project>
       <Name>HeuristicLab.Collections-3.3</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\HeuristicLab.Common.Resources\3.3\HeuristicLab.Common.Resources-3.3.csproj">
-      <Project>{0E27A536-1C4A-4624-A65E-DC4F4F23E3E1}</Project>
-      <Name>HeuristicLab.Common.Resources-3.3</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.Common\3.3\HeuristicLab.Common-3.3.csproj">
       <Project>{A9AD58B9-3EF9-4CC1-97E5-8D909039FF5C}</Project>
@@ -216,6 +146,22 @@
     <ProjectReference Include="..\..\HeuristicLab.Data\3.3\HeuristicLab.Data-3.3.csproj">
       <Project>{BBAB9DF5-5EF3-4BA8-ADE9-B36E82114937}</Project>
       <Name>HeuristicLab.Data-3.3</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\HeuristicLab.Encodings.SymbolicExpressionTreeEncoding\3.4\HeuristicLab.Encodings.SymbolicExpressionTreeEncoding-3.4.csproj">
+      <Project>{06D4A186-9319-48A0-BADE-A2058D462EEA}</Project>
+      <Name>HeuristicLab.Encodings.SymbolicExpressionTreeEncoding-3.4</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\HeuristicLab.ExtLibs\HeuristicLab.ALGLIB\3.1.0\ALGLIB-3.1.0\ALGLIB-3.1.0.csproj">
+      <Project>{FC841674-62A7-4055-BE91-E41944B6C606}</Project>
+      <Name>ALGLIB-3.1.0</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\HeuristicLab.ExtLibs\HeuristicLab.ALGLIB\3.1.0\HeuristicLab.ALGLIB-3.1.0\HeuristicLab.ALGLIB-3.1.0.csproj">
+      <Project>{DE69A359-A5B8-4D3D-BA8D-D5780D7F96D6}</Project>
+      <Name>HeuristicLab.ALGLIB-3.1.0 %28HeuristicLab.ExtLibs\HeuristicLab.ALGLIB\HeuristicLab.ALGLIB-3.1.0\HeuristicLab.ALGLIB-3.1.0%29</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\HeuristicLab.Operators\3.3\HeuristicLab.Operators-3.3.csproj">
+      <Project>{23DA7FF4-D5B8-41B6-AA96-F0561D24F3EE}</Project>
+      <Name>HeuristicLab.Operators-3.3</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.Optimization\3.3\HeuristicLab.Optimization-3.3.csproj">
       <Project>{14AB8D24-25BC-400C-A846-4627AA945192}</Project>
@@ -232,6 +178,14 @@
     <ProjectReference Include="..\..\HeuristicLab.PluginInfrastructure\3.3\HeuristicLab.PluginInfrastructure-3.3.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
       <Name>HeuristicLab.PluginInfrastructure-3.3</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\HeuristicLab.Problems.DataAnalysis.Symbolic\3.4\HeuristicLab.Problems.DataAnalysis.Symbolic-3.4.csproj">
+      <Project>{3D28463F-EC96-4D82-AFEE-38BE91A0CA00}</Project>
+      <Name>HeuristicLab.Problems.DataAnalysis.Symbolic-3.4</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\HeuristicLab.Problems.DataAnalysis\3.4\HeuristicLab.Problems.DataAnalysis-3.4.csproj">
+      <Project>{DF87C13E-A889-46FF-8153-66DCAA8C5674}</Project>
+      <Name>HeuristicLab.Problems.DataAnalysis-3.4</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -267,6 +221,6 @@ set SolutionDir=$(SolutionDir)
 set Outdir=$(Outdir)
 
 call PreBuildEvent.cmd
-SubWCRev "%25ProjectDir%25\" "%25ProjectDir%25\HeuristicLabProblemsDataAnalysisPlugin.cs.frame" "%25ProjectDir%25\HeuristicLabProblemsDataAnalysisPlugin.cs"</PreBuildEvent>
+SubWCRev "%25ProjectDir%25\" "%25ProjectDir%25\HeuristicLabProblemsDataAnalysisSymbolicTimeSeriesPrognosisPlugin.cs.frame" "%25ProjectDir%25\HeuristicLabProblemsDataAnalysisSymbolicTimeSeriesPrognosisPlugin.cs"</PreBuildEvent>
   </PropertyGroup>
 </Project>
