--- a/sources/HeuristicLab.Optimizer/3.3/Properties/Settings.settings
+++ b/sources/HeuristicLab.Optimizer/3.3/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="CollapseOperatorsSidebar" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="MainFormType" Type="HeuristicLab.Optimizer.OptimizerMainFormTypes" Scope="User">
+      <Value Profile="(Default)">DockingMainForm</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
