--- a/sources/HeuristicLab.Optimizer/3.3/app.config
+++ b/sources/HeuristicLab.Optimizer/3.3/app.config
@@ -25,6 +25,9 @@
             <setting name="CollapseOperatorsSidebar" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="MainFormType" serializeAs="String">
+                <value>DockingMainForm</value>
+            </setting>
         </HeuristicLab.Optimizer.Properties.Settings>
     </userSettings>
 </configuration>
