#1619  * Fixed config file
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@6895 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.QuadraticAssignment/3.3/app.config
+++ b/sources/HeuristicLab.Problems.QuadraticAssignment/3.3/app.config
@@ -30,7 +30,7 @@
       <endpoint address="http://services.heuristiclab.com/ProblemInstances-3.3/QAP/QAP.svc"
           binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IQAP"
           behaviorConfiguration="ProblemInstancesLargeMessages"
-          contract="QAPServiceReference.IQAP" name="BasicHttpBinding_IQAP" />
+          contract="QAPInstanceService.IQAP" name="BasicHttpBinding_IQAP" />
     </client>
   </system.serviceModel>
 </configuration>
